@@ -1,5 +1,5 @@
 0.3.1 2016-07-01 python-2.4
-- Python 2.4 and 2.5 tolerance
+- Python 2.3 -2.5 tolerance
 
 0.3.1 2013-11-12
 
